Update code.scss - Scrollbars fix

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -45,8 +45,7 @@ pre {
   margin-bottom: 0;
   border: none;
   background: none;
-  overflow:scroll;
-
+  overflow-y: hidden;
 }
 .highlight > pre {
   text-align: left;
